# learning-management-system

./: .firebaserc  .gitignore  README.md  package-lock.json  package.json  queryFirestore.mjs  tsconfig.json  webpack.config.cjs
book-processor/book-processor/: LICENSE.txt  README.md  pyproject.toml
book-processor/book-processor/src/book_processor/: __about__.py  learning_objectives.py
book-processor/book-processor/tests/: __init__.py
src/backend/: adminSetup.js  package.json  server.ts
src/backend/api/: api.ts  book.ts  classes.ts  getProblemSet.ts  getQuestion.ts  getQuestionCount.ts  learningObjectives.ts  problemSetCreator.ts  score.ts  session.ts  sign-up.ts  teacherFeedback.ts  teacherScoring.ts  test.ts  users.ts
src/firebase/: index.ts
src/frontend/: PreviewPage.tsx  RoleSwitchSpeedDial.tsx  UserContext.tsx  app.tsx  index.html  index.tsx  styles.css  theme.ts
src/frontend/components/: FeedbackDisplay.tsx  HomePage.tsx  RoleSwitchButton.tsx  StudentRoutes.tsx  TeacherRoutes.tsx  TopBar.tsx
src/frontend/components/Sidebar/: Sidebar.css  Sidebar.tsx
src/frontend/components/SignUpPage/: SignUpPage.tsx
src/frontend/components/Student/: ChatBox.tsx  MainApp.tsx  QuestionSidebar.tsx  StudentDropdown.tsx  ViewScoresStudent.tsx
src/frontend/components/Teacher/: CreateProblemSet.tsx  OverwriteQuestion.tsx  (+8 more)
src/gemini/: gemini.ts
src/hooks/: useChat.ts  useLearningObjectives.ts  useQuestions.ts
src/models/: firebase-types.ts  frontend-models.ts  learningObjective.ts  session.ts
src/services/: bookProcessorService.ts  chatService.ts  firebaseService.ts
src/utils/: progressUtils.ts  selectionHandlers.ts
(+8 files in other folders)
